@@ -9,30 +9,23 @@ Subject: Prevent privacy breach
  src/pallets_sphinx_themes/themes/platter/static/platter.css | 1 -
  4 files changed, 6 deletions(-)
 
-diff --git a/src/pallets_sphinx_themes/themes/babel/static/babel.css b/src/pallets_sphinx_themes/themes/babel/static/babel.css
-index 6841512..5bbeed3 100644
 --- a/src/pallets_sphinx_themes/themes/babel/static/babel.css
 +++ b/src/pallets_sphinx_themes/themes/babel/static/babel.css
-@@ -1,6 +1,4 @@
+@@ -1,5 +1,4 @@
  @import url(pocoo.css);
--@import url(http://fonts.googleapis.com/css?family=Ubuntu+Mono:400,400italic,700,700italic);
--@import url(http://fonts.googleapis.com/css?family=Open+Sans:300,400);
+-@import url(http://fonts.googleapis.com/css?family=Bree+Serif);
  
- /* fonts */
- body                        { font-family: 'Ubuntu Mono', 'Consolas', 'Menlo',
-diff --git a/src/pallets_sphinx_themes/themes/click/static/click.css b/src/pallets_sphinx_themes/themes/click/static/click.css
-index adff8b6..1378e53 100644
+ body {
+   font-family: "Verdana", "Garamond", "Georgia", serif;
 --- a/src/pallets_sphinx_themes/themes/click/static/click.css
 +++ b/src/pallets_sphinx_themes/themes/click/static/click.css
 @@ -1,6 +1,4 @@
  @import url("pocoo.css");
--@import url("http://fonts.googleapis.com/css?family=Ubuntu+Mono");
--@import url("http://fonts.googleapis.com/css?family=Open+Sans");
+-@import url("https://fonts.googleapis.com/css?family=Ubuntu+Mono");
+-@import url("https://fonts.googleapis.com/css?family=Open+Sans");
  
  body, pre, code {
    font-family: "Ubuntu Mono", "Consolas", "Menlo", "DejaVu Sans Mono", "Bitstream Vera Sans Mono", monospace;
-diff --git a/src/pallets_sphinx_themes/themes/jinja/static/jinja.css b/src/pallets_sphinx_themes/themes/jinja/static/jinja.css
-index 83de6a1..f6d65a0 100644
 --- a/src/pallets_sphinx_themes/themes/jinja/static/jinja.css
 +++ b/src/pallets_sphinx_themes/themes/jinja/static/jinja.css
 @@ -1,5 +1,4 @@
@@ -41,13 +34,11 @@ index 83de6a1..f6d65a0 100644
  
  h1, h2, h3, h4, h5, h6, p.admonition-title, div.sphinxsidebar input {
    font-family: "Crimson Text", "Garamond", "Georgia", serif;
-diff --git a/src/pallets_sphinx_themes/themes/platter/static/platter.css b/src/pallets_sphinx_themes/themes/platter/static/platter.css
-index 270cc08..36bd6c0 100644
 --- a/src/pallets_sphinx_themes/themes/platter/static/platter.css
 +++ b/src/pallets_sphinx_themes/themes/platter/static/platter.css
 @@ -1,5 +1,4 @@
  @import url(pocoo.css);
--@import url(http://fonts.googleapis.com/css?family=Fira+Mono:400,700|Bitter:400,400italic,700);
+-@import url(https://fonts.googleapis.com/css?family=Fira+Mono:400,700|Bitter:400,400italic,700);
  
- /* fonts */
- body                        { font-family: 'Bitter', serif; font-size: 16px; }
+ body {
+   font-family: "Bitter", "Garamond", "Georgia", serif;
