@@ -1,6 +1,7 @@
 python-pallets-sphinx-themes (1.2.2-1) UNRELEASED; urgency=medium
 
   * New upstream release.
+  * Rebase patches.
 
  -- Ondřej Nový <onovy@debian.org>  Sat, 10 Aug 2019 10:27:09 +0200
 
